--- a/stylesheet.css
+++ b/stylesheet.css
@@ -102,10 +102,6 @@ h1, .titulo-descricao p {
     transition: cubic-bezier(0,1.42,.89,-0.2)
 }
   
-.quarto {    
-    
-}
-  
 .quarto a {
     text-decoration: none;
     color: #3d3d3d;    
@@ -129,6 +125,10 @@ h1, .titulo-descricao p {
     margin: 0 auto;
 }
 
+.mapa{
+    max-width: 1280px;
+    margin: 0 auto;
+}
 .mapa iframe {
     width: 100%;
 }
